Implemented profile view, controller and logic to change password

--- a/DentalResearchApp/Views/Profile/Profile.cshtml
+++ b/DentalResearchApp/Views/Profile/Profile.cshtml
@@ -20,56 +20,87 @@
     <h1 class="secondHeadline" style="text-align: center">Profile</h1>
     <div>
         <hr />
-        <ul class="list-unstyled" style="text-align: center">
+        <ul class="list-unstyled">
             <li class="col-lg-12 col-md-12 col-sm-12">
-                <div class="col-lg-2 col-md-2 col-sm-2">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: right">
                     @Html.Label("First Name: ")
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10" style="text-align: left">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: left">
                     @Html.DisplayFor(model => model.FirstName)
                 </div>
             </li>
             <li class="col-lg-12 col-md-12 col-sm-12">
-                <div class="col-lg-2 col-md-2 col-sm-2">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: right">
                     @Html.Label("Last Name: ")
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10" style="text-align: left">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: left">
                     @Html.DisplayFor(model => model.LastName)
                 </div>
             </li>
             <li class="col-lg-12 col-md-12 col-sm-12">
-                <div class="col-lg-2 col-md-2 col-sm-2">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: right">
                     @Html.Label("E-Mail: ")
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10" style="text-align: left">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: left">
                     @Html.DisplayFor(model => model.Email)
                 </div>
             </li>
             <li class="col-lg-12 col-md-12 col-sm-12">
-                <div class="col-lg-2 col-md-2 col-sm-2">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: right">
                     @Html.Label("Institution: ")
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10" style="text-align: left">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: left">
                     @Html.DisplayFor(model => model.Institution)
                 </div>
             </li>
             <li class="col-lg-12 col-md-12 col-sm-12">
-                <div class="col-lg-2 col-md-2 col-sm-2">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: right">
                     @Html.Label("Country: ")
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10" style="text-align: left">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: left">
                     @Html.DisplayFor(model => model.Country)
                 </div>
             </li>
             <li class="col-lg-12 col-md-12 col-sm-12">
-                <div class="col-lg-2 col-md-2 col-sm-2">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="text-align: right">
                     @Html.Label("Role: ")
                 </div>
-                <div class="col-lg-10 col-md-10 col-sm-10" style="font-weight: bold; font-style: italic; text-align: center">
+                <div class="col-lg-6 col-md-6 col-sm-6" style="font-weight: bold; font-style: italic; text-align: left">
                     @Html.DisplayFor(model => model.Role)
                 </div>
             </li>
+
+            <li class="col-lg-12 col-md-12 col-sm-12" style="text-align: center ">
+
+                    <button href="/Profile/ChangePasswordModal" data-email="@Model.Email" class="changepassword-modal btn btn-primary">Change password</button>
+            </li>
         </ul>
+        <div class="modal fade text-center" id="ChangePasswordModal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    <script type="text/javascript">
+        $('.changepassword-modal').on('click', function (e) {
+            e.preventDefault();
+            var email = $(e.relatedTarget).data('email');
+
+            $('#ChangePasswordModal').modal('show').find('.modal-content').val(email).load($(this).attr('href'));
+        });
+    </script>
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+        </script>
+    }
+
 </body>
 </html>
