- Create og Edit Study er lidt overflødige, men måske praktiske i fremtiden. - Har lavet rollback på det meste, ellers er det kun småændringer hist og her

--- a/DentalResearchApp/Views/Study/AllStudies.cshtml
+++ b/DentalResearchApp/Views/Study/AllStudies.cshtml
@@ -19,9 +19,10 @@
 <div class="col-lg-12, col-md-12, col-xs-12">
     <h1 class="secondHeadline" style="text-align: center">All Studies</h1>
     <hr />
-    <div style="text-align: center">
-        <input type="button" class="btn btn-success" onclick="" value="Create new Study"/>
-    </div>
+    @*Todo: prolly væk
+        <div style="text-align: center">
+        <button href="CreateStudy" class="createStudy-modal btn btn-success">Create new Study</button>
+    </div>*@
     <br/>
     <table class="customTable">
         <thead>
@@ -35,12 +36,17 @@
             <tr>
                 <td class="customTd">
                     <a href="StudyDetails" data-studyId="@item" class="studyDetails-modal">@item</a>
-                    <!--Html.ActionLink(item, "StudyDetails", "Study", item, new {'data-target' = "#StudyDetailsModal"})-->
                 </td>
             </tr>
         }
         </tbody>
     </table>
+    <div class="modal fade text-center" id="CreateStudyModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            </div>
+        </div>
+    </div>
     <div class="modal fade text-center" id="StudyDetailsModal" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -54,6 +60,12 @@
         var studyId = $(e.relatedTarget).data('studyId');
 
         $('#StudyDetailsModal').modal('show').find('.modal-content').val(studyId).load($(this).attr('href'));
+    });
+
+    $('.createStudy-modal').on('click', function(e){
+        e.preventDefault();
+
+        $('#CreateStudyModal').modal('show').find('.modal-content').load($(this).attr('href'));
     });
 </script>
 </body>
