--- a/DentalResearchApp/wwwroot/css/Index.css
+++ b/DentalResearchApp/wwwroot/css/Index.css
@@ -92,11 +92,17 @@ section {
   z-index: 1;
 }
 
+.customTable left {
+    border: 4px solid #47748b;
+    margin: 0 auto 0 auto;
+    text-align: left;
+    width: 50%;
+}
 .customTable {
     border: 4px solid #47748b;
     margin: 0 auto 0 auto;
     padding: 20px 0px 120px 0px;
-    width: 50%;
+    width: 70%;
 }
 .customTd {
     border: 2px solid #47748b;
