--- a/DentalResearchApp/Views/Study/AllStudies.cshtml
+++ b/DentalResearchApp/Views/Study/AllStudies.cshtml
@@ -16,7 +16,7 @@
     <title>Dental Research App - All Studies</title>
 </head>
 <body>
-<div class="col-lg-12, col-md-12, col-xs-12">
+<div class="col-lg-12 col-md-12 col-xs-12">
     <h1 class="secondHeadline" style="text-align: center">All Studies</h1>
     <hr />
     @*Todo: prolly væk
