- Ny view model for study sessions og lidt oprydning

--- a/DentalResearchApp/Views/Session/CreateSession.cshtml
+++ b/DentalResearchApp/Views/Session/CreateSession.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DentalResearchApp.Models
-@model DentalResearchApp.Models.StudySessionModel
+@model StudySessionViewModel
 @{
     ViewBag.Title = "Create Session";
     Layout = "~/Views/_Layout.cshtml";
