--- a/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/Views/Login/Login.cshtml
@@ -5,9 +5,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
-    <link rel="stylesheet" href="../css/3rdParty/bootstrap.min.css" />
+    @*<link rel="stylesheet" href="../css/3rdParty/bootstrap.min.css" />*@
     <script src="~/js/3rdParty/jquery.min.js"></script>
-    <script src="~/js/3rdParty/bootstrap.min.js"></script>
+    @*<script src="~/js/3rdParty/bootstrap.min.js"></script>*@
 
     <meta charset="utf-8" />
     <title>Dental Research App - Log In</title>
@@ -25,7 +25,7 @@
             <br />
             <input type="submit" value="Sign in" form="loginform" style="margin-left: 140px; margin-top: 40px">
         </form>
-        <button href="/Login/ForgotMyPasswordModal" class="forgotmypassword-modal btn-sm btn-primary">Forgot My Password</button>
+        <button href="/Login/ForgotMyPasswordModal" class="forgotmypassword-modal buttonForgotPswd">Forgot My Password</button>
         <div class="modal fade text-center" id="ForgotMyPasswordModal" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
