--- a/DentalResearchApp/wwwroot/css/Styles.css
+++ b/DentalResearchApp/wwwroot/css/Styles.css
@@ -106,6 +106,20 @@ input[type=button], input[type=submit], input[type=reset] {
     font-size:0.8em;
 }
 
+.buttonForgotPswd {
+    background:#2980b9;
+    width:125px;
+    padding-top:5px;
+    padding-bottom:5px;
+    color:white;
+    border-radius:4px;
+    border: #2980b9 1px solid;
+  
+    margin-left:11px;
+    font-weight:800;
+    font-size:0.8em;
+}
+
 .button:hover{
     background:#2CC06B; 
 }
