--- a/DentalResearchApp/Views/Session/SessionDetails.cshtml
+++ b/DentalResearchApp/Views/Session/SessionDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model DentalResearchApp.Models.StudySessionModel
+﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
+@model DentalResearchApp.Models.StudySessionViewModel
 @{
     ViewBag.Title = "Session Details";
     Layout = "~/Views/_Layout.cshtml";
@@ -17,34 +18,41 @@
 
 <body>
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <h1 class="secondHeadline" style="text-align: center">Study: @ViewBag.studyName</h1>
-        <h2 class="secondHeadline" style="text-align: center">Session: @Model.SessionName</h2>
+        <h1 class="secondHeadline" style="text-align: center">@ViewBag.studyName</h1>
+        <h2 class="secondHeadline" style="text-align: center">@Model.SessionName</h2>
         <hr />
-            <h4 class="secondHeadline" style="font-weight: bold">Related Surveys</h4>
-            <table class="customTable">
-                <thead>
-                    <tr>
-                        <th class="customTh">Surveys</th>
-                    </tr>
-                </thead>
-                @if (Model.SelectedSurveys.Any())
-                {
+    </div>
+
+    <div class="col-lg-12 col-md-12 col-xs-12" style="text-align: center">
+        <h4 class="secondHeadline" style="font-weight: bold">Related Surveys</h4>
+        <table class="customTable">
+            <thead>
+                <tr>
+                    <th class="customTh">Surveys</th>
+                </tr>
+            </thead>
+            @if (Model.SelectedSurveys.Any())
+            {
                 <tbody>
-                    @foreach (var item in Model.AllSurveys)
+                    @foreach (var item in Model.SelectedSurveys)
                     {
-                    <tr>
-                        <td class="customTd">
-                            @item @*Todo: Hvor fører et click hen?*@
-                        </td>
-                    </tr>
+                        <tr>
+                            <td class="customTd">
+                                @item
+                            </td>
+                        </tr>
                     }
                 </tbody>
-                }
-            </table>
-        </div>
-<hr />
-<div class="col-lg-12 col-md-12 col-sm-12" style="text-align: center">
-    <button class="btn btn-primary">Add Survey to Session</button> @*Todo: Find ud af hvordan denne knap skal fungere*@
-</div>
+            }
+        </table>
+        <br />
+        @using (Html.BeginForm("DeleteSession", "Session", HttpMethod.Post))
+        {
+            @Html.Hidden("sessionName",Model.SessionName)
+            @Html.Hidden("studyId",Model.StudyId)
+            <input type="submit" value="Delete Session" class="btn btn-danger" />
+        }
+        @Html.ActionLink("Back to Studies List", "AllStudies", "Study", null, new { @class = "btn btn-primary" })
+    </div>
 </body>
 </html>
