--- a/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/Views/_Layout.cshtml
@@ -40,7 +40,7 @@
             <hr/>
             <ul class="list-unstyled">
                 <li>
-                    @Html.ActionLink("All Studies", "AllStudies", "Study")
+                    @Html.ActionLink("Studies", "AllStudies", "Study")
                 </li>
                 <li>
                     @Html.ActionLink("Find Results", "FindResults", "Results")
