jeg er færdig med det bæ

--- a/DentalResearchApp/Views/Admin/EditUserModal.cshtml
+++ b/DentalResearchApp/Views/Admin/EditUserModal.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DentalResearchApp.Models
-@model DentalResearchApp.Models.UserModel
+@model UserModel
 
 <div class="modal-header">
     <link rel="stylesheet" href="/css/Index.css" type="text/css" />
